# hw8

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
app/: database.py
myproject/: settings.py
nfactorial/: urls.py  views.py
scripts/: launch.sh
