[project]
name = "hw8"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
packages = [{include = "hw8"}]

dependencies = [
    "fastapi >=0.109.0",
    "uvicorn >=0.27.0",
    "sqlalchemy >=2.0.39",
    "python-jose[cryptography] >=3.3.0",
    "passlib[bcrypt] >=1.7.4",
    "python-multipart >=0.0.6",
    "alembic >=1.15.1",
    "python-dotenv >=1.0.0",
    "psycopg2-binary >=2.9.9"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"